--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "types": "types/index.d.ts",
   "esnext": "src/index.js",
   "sideEffects": false,
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "test": "jest --watch",
     "test:ci": "jest",
@@ -311,7 +314,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-storybook": "^0.6.1",
     "holderjs": "^2.9.3",
-    "jest": "28.1.3",
+    "jest": "^29.4.1",
     "jest-environment-jsdom": "28.1.3",
     "jsdom": "^19.0.0",
     "json-loader": "^0.5.7",
