--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -2,12 +2,13 @@ on:
   push:
     branches:
       - master
+      - revertAccidentalV10
 name: Release Bot
 jobs:
   release-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v2
+      - uses: GoogleCloudPlatform/release-please-action@v3
         id: release-please
         with:
           token: ${{ secrets.REACTSTRAP_TOKEN }}
@@ -19,7 +20,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v2
+      - uses: GoogleCloudPlatform/release-please-action@v3
         id: release
         with:
           token: ${{ secrets.REACTSTRAP_TOKEN }}
